workspace/project2/src/objects/Roles__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emp_role__c</fullName>
        <label>emp_role</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Roles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>